@@ -1,5 +1,9 @@
 #+title: compat.el - Changelog
 
+* Development
+
+- compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
+
 * Release of "Compat" Version 29.1.3.4
 
 - Ensure that ~seq~ is required properly both at compile time and runtime, such
